Add shelter registration system with Supabase integration
Backend Features:
- supabase_client.py: Supabase client with non-legacy keys (sb_publishable_*, sb_secret_*)
- auth.py: User registration, login, guest sessions, JWT tokens
- shelters.py: Shelter CRUD operations, location search
- New API endpoints: /auth/*, /shelters/*
- Updated config.py with Supabase and JWT settings

Frontend Features:
- AuthContext: React context for auth state management
- auth.js/shelters.js: API service modules
- LoginPage: Email/password login + guest access
- RegisterPage: New user registration
- RegisterShelterPage: Map-based shelter registration with amenities
- ShelterMapPage: Non-satellite map showing all shelters
- Updated Header with navigation to shelter pages
- Added react-router-dom for routing

Database Schema (run in Supabase SQL Editor):
- users table: id, email, password_hash, role, display_name
- shelters table: id, name, description, lat, lon, capacity, amenities, status, added_by

Notes:
- Uses NEW Supabase key format (non-legacy)
- Guest users can register shelters (added_by = NULL)
- Shelter map uses OpenStreetMap tiles (no satellite view)

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -5,3 +5,9 @@ pydantic==2.5.2
 pydantic-settings==2.1.0
 python-dotenv==1.0.0
 python-multipart==0.0.6
+# Supabase client (using new non-legacy keys)
+supabase==2.3.0
+# JWT for authentication
+PyJWT==2.8.0
+# Email validation
+email-validator==2.1.0
