chore: remove tracked backend/.env and add .env.example; ignore backend/.env

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,3 +1,33 @@
+# Example backend environment variables (DO NOT commit secrets)
+# Copy this file to `backend/.env` locally and fill values before running.
+
+# Sentinel Hub Credentials
+SENTINEL_CLIENT_ID=
+SENTINEL_CLIENT_SECRET=
+
+# Sentinel Hub Endpoints (optional overrides)
+SENTINEL_AUTH_URL=https://services.sentinel-hub.com/auth/realms/main/protocol/openid-connect/token
+SENTINEL_PROCESS_URL=https://services.sentinel-hub.com/api/v1/process
+
+# Grok API Key for AI Chatbot
+GROK_API_KEY=
+
+# OpenWeatherMap API Key
+OPENWEATHER_API_KEY=
+
+# Supabase Configuration
+SUPABASE_URL=
+SUPABASE_PUBLISHABLE_KEY=
+SUPABASE_SECRET_KEY=
+
+# JWT Secret
+JWT_SECRET=
+
+# Optional tuning
+CORS_ORIGINS=["http://localhost:5173","http://localhost:3000"]
+CACHE_TTL_SECONDS=300
+RATE_LIMIT_REQUESTS=100
+RATE_LIMIT_WINDOW=60
 # Environment Variables Template
 # Copy this file to .env and fill in your values
 
